@@ -3,6 +3,24 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Settings Folder" Height="300" Width="300">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        <ListBox Grid.Row="0" Margin="4"
+                 ItemsSource="{Binding AvailableFolders}"
+                 SelectedItem="{Binding SelectedFolder, Mode=TwoWay}"
+                 />
+        <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center">
+            <Button Margin="4" Height="24" Width="24" ToolTip="Remove from list" IsEnabled="{Binding IsFolderSelected}" Click="Button_Click">
+                <Image Height="16" Width="16" Source="/Resources/general/delete.png" />
+            </Button>
+            <Button Margin="4" Height="24" Width="24" ToolTip="Add folder" Click="Button_Click_2">
+                <Image Height="16" Width="16" Source="/Resources/general/add.png" />
+            </Button>
+            <Button Margin="4" Height="24" Width="24" ToolTip="Select folder" IsEnabled="{Binding IsFolderSelected}" Click="Button_Click_1">
+                <Image Height="16" Width="16" Source="/Resources/general/check.png" />
+            </Button>
+        </StackPanel>
     </Grid>
 </Window>
